--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,5 +1,5 @@
-<div class="row">
-    <div class="col-xs-12">
+<div class="row backdrop">
+    <div class="col-xs-12 alert-box">
         <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
             <div class="row">
                 <div class="col-xs-12">
