--- a/src/app/recipes/recipe-edit/recipe-edit.component.css
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.css
@@ -16,13 +16,15 @@ textarea.ng-invalid.ng-touched {
 
 .alert-box{
     position: fixed;
-    top: 30vh;
+    top: 10vh;
     left: 20vw;
     width: 60vw;
     padding: 16px;
     z-index: 100;
     background-color: white;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+    max-height: 700px;
+    overflow-y: scroll;
 }
 .alert-box-actions{
     text-align: right;
