--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,14 +1,7 @@
 <div class="row backdrop">
-    <div class="col-xs-12 alert-box">
+    <div class="col-xs-12 alert-box" [ngStyle]="{overflowY: editmode ? 'scroll' : 'hidden'}">
+        <hr>
         <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
-            <div class="row">
-                <div class="col-xs-12">
-                    <button type="submit" 
-                            class="btn btn-success"
-                            [disabled]="!recipeForm.valid">Save</button>
-                    <button type="button" class="btn btn-danger" (click)="onCencel()">Cencel</button>
-                </div>
-            </div>
             <div class="row">
                 <div class="col-xs-12">
                     <div class="form-group">
@@ -80,11 +73,20 @@
                     </div>
                     <hr>
                     <div class="row">
-                        <div class="colxs-12">
+                        <div class="col-xs-12">
                             <button 
                                 class="btn btn-primary" 
                                 type="button" 
                                 (click)="onAddIngredient()">New Ingredient</button>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row" style="text-align: right;">
+                        <div class="col-xs-12">
+                            <button type="submit" 
+                                    class="btn btn-success"
+                                    [disabled]="!recipeForm.valid" style="margin-right: 10px">Save</button>
+                            <button type="button" class="btn btn-danger" (click)="onCencel()">Cencel</button>
                         </div>
                     </div>
                 </div>
