--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -25,12 +25,12 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-12">
-                    <button class="btn btn-success" type="submit" [disabled]="!f.valid">{{editMode ? "Update": "Add"}}</button>
+                <div class="col-xs-12"  >
+                    <button class="btn btn-success" type="submit" [disabled]="!f.valid" style="margin-right: 10px">{{editMode ? "Update": "Add"}}</button>
                     <button class="btn btn-danger" 
                     type="button" 
                     (click)="onDelete()"
-                    *ngIf="editMode">Delete</button>
+                    *ngIf="editMode" style="margin-right: 10px">Delete</button>
                     <button class="btn btn-primary" type="button" (click)="onClear()">Clear</button>
                 </div>
             </div>
