--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<!-- from New-brunch -->
 <app-header></app-header>
 <div class="container">
   <div class="row">
@@ -6,12 +7,6 @@
     </div>
   </div>
 </div>
-
-
-<!-- <app-button>
-  <span uzbek>my component</span>
-  <div>This is</div>
-</app-button> -->
 
 
 
