modal without routhing

--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -2,6 +2,9 @@
     <div class="col-md-5">
         <app-recipe-list></app-recipe-list>
     </div>
+    <div class="col-md-5">
+        <app-recipe-edit *ngIf="newRecipeStatus"></app-recipe-edit>
+    </div>
     <div class="col-md-7">
         <router-outlet></router-outlet>
     </div>
